edits in projects

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <img src="https://res.cloudinary.com/dgrxeqayx/image/upload/v1748156844/freepik__enhance__3620_wei5jq.png" class="h-80 lg:h-[35rem] w-screen object-cover"/>
 
-    <div class="px-20 md:px-40 lg:px-90 py-25 fade-in-up">
+    <div class="px-14 md:px-40 lg:px-90 py-25 fade-in-up">
       <div class="flex items-center gap-1 py-4 ">
         <img src="./Image/right-arrow 2.png" class="w-3 fade-in-leftside"/>
         <p class="text-sm font-medium">About us</p>
@@ -102,7 +102,7 @@
  </section>
 
 <section class="lg:flex">
-  <div class="px-14 md:px-20  py-15">
+  <div class="px-14 md:px-20 py-15">
     <div class="">
         <div class="flex items-center gap-1 py-4">
         <img src="./Image/right-arrow 2.png" class="w-3 fade-in-leftside"/>
@@ -180,7 +180,7 @@
   </div>
 </section>
 
-<section class="bg-[#07252d] pb-8">
+<section class="bg-[#07252d] md:pb-8">
 
 <div class="py-28 md:py-0 md:flex items-center relative overflow-hidden ">
   <div>
