finalize logistics website frontend with animations and responsiveness

--- a/index.html
+++ b/index.html
@@ -407,20 +407,20 @@
 
 </section>
 
-<section class="bg-[#07252d] relative w-full">
-<div class="absolute -top-20 left-0 right-0 md:mb-22  overflow-hidden">
+<section id="truck-section" class="bg-[#07252d] relative w-full">
+<div class="absolute -top-20 left-0 right-0 md:mb-22 overflow-hidden">
   <div class="flex justify-end items-end">
     <!-- Truck -->
 
   <img
     src="https://res.cloudinary.com/dgrxeqayx/image/upload/v1749531670/676fbe0accb58f6479bff387_electric-forklift_r7hdtu.avif"
     alt="truck"
-    class="truck w-48 md:w-70 "
+    class="truck-img w-48 md:w-70 "
   />
   <img
     src="https://res.cloudinary.com/dgrxeqayx/image/upload/v1749531663/675d09654c85222376b3e4cf_box-img_fnspkf.avif"
     alt="box"
-    class="box w-20 md:w-30 absolute "
+    class="box-img w-20 md:w-30 absolute "
   />
   </div>
 
